<?xml version="1.0" encoding="UTF-8"?>
<project
	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd"
	xmlns="http://maven.apache.org/POM/4.0.0"
	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance">
	<modelVersion>4.0.0</modelVersion>
	<groupId>com.checkmarx.ast.eclipse</groupId>
	<artifactId>checkmarx-eclipse-plugin</artifactId>
	<version>1.0.0-SNAPSHOT</version>
	<packaging>pom</packaging>


	<modules>
		<module>common-lib</module>
		<module>devassist-lib</module>
		<module>checkmarx-ast-eclipse-plugin</module>
		<module>com.checkmarx.eclipse.feature</module>
		<module>com.checkmarx.eclipse.site</module>
		<module>checkmarx-ast-eclipse-plugin-tests</module>
	</modules>

	<properties>
		<tycho.version>4.0.11</tycho.version>
		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
		<maven.compiler.source>17</maven.compiler.source>
		<maven.compiler.target>17</maven.compiler.target>
	</properties>

	<build>
		<pluginManagement>
			<plugins>
				<plugin>
					<groupId>org.eclipse.tycho</groupId>
					<artifactId>tycho-p2-director-plugin</artifactId>
					<version>${tycho.version}</version>
				</plugin>

				<!-- This plugin configuration is used to store Eclipse m2e
				settings only. -->
				<!-- It has no influence on the Maven build itself. -->
				<plugin>
					<groupId>org.eclipse.m2e</groupId>
					<artifactId>lifecycle-mapping</artifactId>
					<version>1.0.0</version>
					<configuration>
						<lifecycleMappingMetadata>
							<pluginExecutions>
								<pluginExecution>
									<pluginExecutionFilter>
										<groupId>org.eclipse.tycho</groupId>
										<artifactId>tycho-packaging-plugin</artifactId>
										<versionRange>[0.0.0,)</versionRange>
										<goals>
											<goal>build-qualifier</goal>
											<goal>validate-id</goal>
											<goal>validate-version</goal>
										</goals>
									</pluginExecutionFilter>
									<action>
										<ignore />
									</action>
								</pluginExecution>
								<pluginExecution>
									<pluginExecutionFilter>
										<groupId>org.eclipse.tycho</groupId>
										<artifactId>tycho-compiler-plugin</artifactId>
										<versionRange>[0.0.0,)</versionRange>
										<goals>
											<goal>compile</goal>
										</goals>
									</pluginExecutionFilter>
									<action>
										<ignore />
									</action>
								</pluginExecution>
							</pluginExecutions>
						</lifecycleMappingMetadata>
					</configuration>
				</plugin>

			</plugins>
		</pluginManagement>

		<plugins>
			<plugin>
				<groupId>org.eclipse.tycho</groupId>
				<artifactId>tycho-maven-plugin</artifactId>
				<version>${tycho.version}</version>
				<extensions>true</extensions>
			</plugin>

			<plugin>
				<groupId>org.eclipse.tycho</groupId>
				<artifactId>tycho-versions-plugin</artifactId>
				<version>${tycho.version}</version>
			</plugin>
			<plugin>
				<groupId>org.eclipse.tycho</groupId>
				<artifactId>tycho-compiler-plugin</artifactId>
				<version>${tycho.version}</version>
				<configuration>
					<!-- We should turn on this flag and resolve all the warning
					issues! -->
					<showWarnings>true</showWarnings>
					<compilerArgument>
						-warn:+discouraged,+forbidden,-unavoidableGenericProblems,-warningToken</compilerArgument>
				</configuration>
			</plugin>

			<plugin>
				<groupId>org.eclipse.tycho</groupId>
				<artifactId>tycho-packaging-plugin</artifactId>
				<version>${tycho.version}</version>
				<executions>
					<execution>
						<phase>package</phase>
						<id>package-feature</id>
						<configuration>
							<finalName>
								${project.artifactId}_${unqualifiedVersion}.${buildQualifier}
							</finalName>
						</configuration>
					</execution>
				</executions>
				<!-- <configuration> <format>'v'yyyyMMddHHmm</format>
				</configuration> -->
			</plugin>

			<plugin>
				<groupId>org.eclipse.tycho</groupId>
				<artifactId>target-platform-configuration</artifactId>
				<version>${tycho.version}</version>
				<configuration>
					<executionEnvironment>JavaSE-17</executionEnvironment>
					<pomDependencies>consider</pomDependencies>
					<environments>
						<environment>
							<os>linux</os>
							<ws>gtk</ws>
							<arch>x86_64</arch>
						</environment>
						<environment>
							<os>win32</os>
							<ws>win32</ws>
							<arch>x86_64</arch>
						</environment>
						<environment>
							<os>macosx</os>
							<ws>cocoa</ws>
							<arch>x86_64</arch>
						</environment>
					</environments>

					<extraRequirements>
						<requirement>
							<type>eclipse-plugin</type>
							<id>org.objectweb.asm</id>
							<versionRange>[9.10.1,9.10.1]</versionRange>
						</requirement>
						<requirement>
							<type>eclipse-plugin</type>
							<id>org.objectweb.asm.tree</id>
							<versionRange>[9.10.1,9.10.1]</versionRange>
						</requirement>
						<requirement>
							<type>eclipse-plugin</type>
							<id>org.objectweb.asm.commons</id>
							<versionRange>[9.10.1,9.10.1]</versionRange>
						</requirement>
						<requirement>
							<type>eclipse-plugin</type>
							<id>org.objectweb.asm.util</id>
							<versionRange>[9.10.1,9.10.1]</versionRange>
						</requirement>
						<requirement>
							<type>eclipse-plugin</type>
							<id>org.objectweb.asm.analysis</id>
							<versionRange>[9.10.1,9.10.1]</versionRange>
						</requirement>
					</extraRequirements>

				</configuration>
			</plugin>
			<plugin>
				<groupId>org.jacoco</groupId>
				<artifactId>jacoco-maven-plugin</artifactId>
				<version>0.8.11</version>

				<executions>

					<execution>
						<id>merge</id>
						<phase>verify</phase>
						<goals>
							<goal>merge</goal>
						</goals>
						<configuration>
							<fileSets>
								<fileSet>
									<directory>.</directory>
									<includes>
										<include>**/target/jacoco.exec</include>
									</includes>
								</fileSet>
							</fileSets>
							<destFile>${project.build.directory}/jacoco.exec</destFile>
						</configuration>
					</execution>

					<execution>
						<id>report</id>
						<phase>verify</phase>
						<goals>
							<goal>report-aggregate</goal>
						</goals>
					</execution>

				</executions>
			</plugin>
		</plugins>
	</build>

	<repositories>
		<repository>
			<id>2024-12</id>
			<layout>p2</layout>
			<url>https://download.eclipse.org/releases/2024-12</url>
		</repository>
		<repository>
			<id>swtbot</id>
			<layout>p2</layout>
			<url>https://download.eclipse.org/technology/swtbot/releases/latest</url>
		</repository>
		<repository>
			<id>mylyn</id>
			<layout>p2</layout>
			<url>https://download.eclipse.org/mylyn/releases/latest</url>
		</repository>

	</repositories>
	<dependencies>
		<dependency>
			<groupId>jakarta.inject</groupId>
			<artifactId>jakarta.inject-api</artifactId>
			<version>2.0.1</version>
		</dependency>
		<dependency>
			<groupId>org.osgi</groupId>
			<artifactId>org.osgi.service.event</artifactId>
			<version>1.4.1</version>
		</dependency>
	</dependencies>
</project>
